src/components/blocks/search-form/_search-form.scss
.b-search-form {
  overflow: hidden;
  width: 100%;

  &--etc-gateway {
    border-radius: 2px;
    overflow: visible;
    padding: 10px;
    position: relative;

    &[suggesting] {
      background: siteColor(vam-grey-2);
    }
  }

  &__inner {
    border-bottom: 1px solid siteColor(vam-grey-5);
    position: relative;

    .b-search-form--etc & {
      align-items: center;
      background: siteColor(vam-white);
      border: none;
      border-radius: 2px;
      display: flex;
      justify-content: space-between;
      overflow: hidden;
      padding: 7px 14px;
    }
  }

  &__icon,
  &__input-wrapper {
    display: inline-block;
  }

  &__icon {
    color: siteColor(vam-white);
    height: 25px;
    margin: 0 2px -4px 0;
    opacity: .5;
    width: 25px;

    @include bpMinSmall {
      height: 34px;
      margin: 0 4px -5px 0;
      width: 34px;
    }
  }

  &__input-wrapper {
    position: relative;
    width: calc(100% - 42px);

    @include bpMinSmall {
      width: calc(100% - 140px);
    }

    .b-search-form--etc & {
      width: calc(100% - 100px);
    }

    .b-search-form--etc-gateway & {
      width: calc(100% - 140px);
    }
  }

  &__input,
  &__underscore {
    @include typeSetting(5);

    @include bpMinSmall {
      @include typeSetting(7);
    }

    .b-search-form--etc & {
      @include typeSetting(4);

      @include bpMinSmall {
        @include typeSetting(5);
      }
    }
  }

  &__input {
    background-color: transparent;
    border: none;
    caret-color: siteColor(primary-green);
    color: siteColor(vam-white);
    margin: 4px 0;
    padding: 0;
    width: 100%;

    .b-search-form--etc & {
      color: siteColor(vam-black);
    }

    &::selection {
      background-color: siteColor(vam-grey-4);
    }

    &::-ms-clear {
      display: none;
    }

    @include bpMinSmall {
      margin: 8px 0;
    }
  }

  &__underscore {
    border-bottom: 3px solid siteColor(primary-green);
    bottom: 0;
    display: inline-block;
    height: 3px;
    left: 0;
    overflow: hidden;
    position: absolute;

    @include bpMinSmall {
      border-width: 5px;
      height: 5px;
    }
  }

  &__submit,
  &__clear {
    border: none;
    color: siteColor(vam-white);
    cursor: pointer;
    float: right;
    position: relative;
  }

  &__clear {
    display: none;

    @include bpMinSmall {
      display: block;
      height: 19px;
      margin-top: 30px;
      width: 19px;

      &#{&}--hidden {
        display: none;
      }
    }
  }

  &__submit {
    @include typeSetting(3, semi-bold, uppercase);
    align-items: center;
    display: inline-flex;
    margin-top: 15px;

    @include bpMinSmall {
      margin-top: 28px;

      &#{&}--hidden {
        display: none;
      }
    }

    .b-search-form--etc & {
      color: siteColor(vam-black);
      margin-top: 0;
    }

    .b-search-form--etc-gateway & {
      border-radius: 0 2px 2px 0;
      margin: 0;
      padding: 30px 37px;
      position: absolute;
      right: 0;
    }

    &::after {
      border: 6px solid transparent;
      border-left-color: currentColor;
      content: '';
      display: inline-block;
      margin-left: 8px;
    }
  }

  &__filters {
    @include typeSetting(3);
    color: siteColor(vam-white);
    margin: 20px 0;
  }

  &__filter-toggle {
    cursor: pointer;
    margin-bottom: 20px;
    text-decoration: underline;

    &:hover,
    &:focus {
      text-decoration: none;
    }

    &::after {
      background: siteColor(vam-white);
      border-radius: 50%;
      color: siteColor(vam-black);
      content: '+';
      display: inline-block;
      font-size: 16px;
      height: 16px;
      line-height: 16px;
      margin-left: 10px;
      text-align: center;
      text-decoration: none;
      width: 16px;
    }

    &--off::after {
      content: '-';
      font-weight: bold;
    }

    .b-search-form__filter-toggle-set[active] > &:not(&--off) {
      display: none;
    }
  }

  &__filter-toggle-pane {
    display: none;

    .b-search-form__filter-toggle-set[active] > & {
      display: block;
    }
  }

  &__filter {
    display: inline-block;
    margin: 0 44px 0 0;

    .b-search-form--etc-gateway & {
      margin-right: 20px;
    }
  }

  &__filter-input {
    @include typeSetting(4);
    border-radius: 2px;

    &[type="checkbox"] {
      @include visuallyHidden;
    }
    &[type="checkbox"] + label {
      cursor: pointer;
      padding-left: 35px;
      position: relative;
    }
    &[type="checkbox"] + label:before {
      background: transparent;
      border: 1px solid siteColor(vam-white);
      border-radius: 2px;
      content: '';
      height: 25px;
      left: 0;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      width: 25px;
    }
    &[type="checkbox"]:checked + label:before {
      background: themeColor(silent-green);
      border: 1px solid themeColor(silent-green);
    }
    &[type="checkbox"]:checked + label:after {
      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='tick' viewBox='0 0 16 16'%3E%3Ctitle%3ECheckbox-ticked%3C/title%3E%3Cpath d='M6.186 9.528l-.106-.124a205.746 205.746 0 0 1-2.036-2.41L1.737 8.913l.176.211a234.544 234.544 0 0 0 1.89 2.235l.11.127a71.654 71.654 0 0 0 1.433 1.626c.223.243.407.436.556.58.098.095.185.174.272.243.088.068.088.068.231.159.226.13.45.216.789.216.567 0 .802-.164 1.107-.474.07-.07.128-.14.19-.221.079-.104.167-.231.272-.392.177-.27.41-.648.698-1.129a198.71 198.71 0 0 0 1.935-3.331l.106-.186a586.26 586.26 0 0 0 2.81-4.99l-2.62-1.46a363.728 363.728 0 0 1-.868 1.552A583.35 583.35 0 0 1 8.896 7.09l-.106.185c-.73 1.277-1.35 2.348-1.826 3.148-.234-.266-.495-.566-.778-.895z' fill='currentColor' fill-rule='nonzero'%3E%3C/path%3E%3C/svg%3E");
      background-repeat: no-repeat;
      color: siteColor(vam-black);
      content: ' ';
      font-size: 1.2em;
      font-weight: bold;
      height: 25px;
      left: 0;
      line-height: 16px;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      width: 25px;
    }

    &--date {
      border: none;
      color: siteColor(vam-black);
      display: block;
      margin-top: 6px;
      padding: 6px 4px 6px 14px;
      width: 100px;
    }
  }

  &__filter-select {
    @include typeSetting(2, semi-bold, uppercase);
    background: transparent;
    border: 1px solid siteColor(vam-white);
    border-radius: 2px;
    color: siteColor(vam-white);
    padding: 10px 20px;

    &:after {
      color: blue;
    }

    > option {
      background: siteColor(vam-black);
      border: 4px solid transparent;
      color: siteColor(vam-white);
    }
  }

  &__location-wrapper {
    margin-left: 20px;
    opacity: 0;
  }
  &__location-toggle:checked ~ &__location-wrapper {
    opacity: 1;
    transition: opacity .3s ease;
  }

  &__suggestions {
    background: siteColor(vam-grey-2);
    border-radius: 0 0 2px 2px;
    color: siteColor(vam-white);
    left: 0;
    max-height: 0;
    opacity: 0;
    overflow: auto;
    position: absolute;
    width: 100%;
    z-index: 1;

    .b-search-form[suggesting] & {
      max-height: 74vh;
      opacity: 1;
      padding: 10px;
      transition: max-height .4s ease-out, opacity .2s ease;
    }
  }

  &__suggestion {
    @include typeSetting(3);
    border-radius: 2px;
    display: block;
    margin: -2px 0;
    padding: 20px 14px;

    @include bpMinSmall {
      @include typeSetting(4, bold);
    }

    &:hover,
    &:focus {
      background: siteColor(vam-grey-4);
      color: siteColor(vam-black);
    }

    #{&} + & {
      border-top: 1px solid siteColor(vam-grey-4);
    }
  }

  &__suggestion-type {
    @include typeSetting(0, bold, uppercase);
    display: inline-block;
    margin-right: 16px;

    @include bpMinSmall {
      @include typeSetting(3, bold, uppercase);
    }
  }

  &__facet-pane {
    background: siteColor(vam-white);
    border-radius: 0 0 2px 2px;
    color: siteColor(vam-black);
    display: none;
    margin-top: -7px;
    padding: 7px 14px;
    &--active {
      display: block;
    }
  }

  &__facets-container {
    display: flex;
  }

  &__facets-seperator {
    border-top: 2px solid #dee0e2;
  }

  &__facets {
    display: none;
    flex-direction: row;
    flex-wrap: wrap;
    height: 51px;
    margin: 7px 0;
    overflow: hidden;
    width: calc(100% - 70px);
    @include bpMinXSmall {
      display: flex;
    }
    @include bpMinMedium {
      height: auto;
      overflow: auto;
      width: 100%;
    }
  }

  &__facets-mobile {
    display: block;
    padding: 7px 0;
    @include bpMinMedium {
      display: none;
    }
  }
}

